--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+            <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+            <link href="pricing.css" rel="stylesheet">
+        {% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
