--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,12 +4,52 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-            <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-            <link href="pricing.css" rel="stylesheet">
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         {% endblock %}
     </head>
+    <header>
+        {% block nav %}
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="{{ path('index') }}">La Centrale</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item {{ app.request.get('_route') == 'annonces' ? 'active'}}">
+                            <a class="nav-link" href="{{ path('annonces') }}">Annonces </a>
+                        </li>
+                        <li class="nav-item {{ app.request.get('_route') == 'addannonces' ? 'active'}}">
+                            <a class="nav-link " href="{{ path('addannonces') }}">Ajouter une Annonce</a>
+                        </li>
+                        <li class="nav-item {{ app.request.get('_route') == 'app_login' ? 'active'}}">
+                            <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
+                        </li>
+                        <li class="nav-item {{ app.request.get('_route') == 'register' ? 'active'}}">
+                            <a class="nav-link" href="{{ path('register') }}">S'enregistrer</a>
+                        </li>
+
+                        <li class="nav-item {{ app.request.get('_route') == 'app_logout' ? 'active'}}">
+                            <a class="nav-link" href="{{ path('app_logout') }}">Se deconnecter</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        {% endblock  %}
+    </header>
+
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
+
+
+    <footer class="page-footer font-small blue pt-4">
+        {% block footer %}
+            <div class="footer-copyright text-center py-3"  style="position: fixed; bottom: 0">
+                © 2020 Copyright:
+                <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+            </div>
+        {% endblock  %}
+    </footer>
 </html>
