--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -6,12 +6,17 @@
 
 
 {% block body %}
-    <body style='background: url("images/voiture.jpg");height: 1000px;background-repeat: no-repeat;background-size: cover'>
 
+<div class="container"></div>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">Voir les annonces</h5>
+            <h6 class="card-subtitle mb-2 text-muted">ANNONCES</h6>
+            <p class="card-text">VIENS VOIR LES VOITURES</p>
+            <a href="{{ path('annonces') }}" class="card-link">CLIQUE</a>
+        </div>
+    </div>
 
-    <a class="uk-button uk-button-primary uk-width-2-2 uk-margin-small-bottom uk-position-center uk-overlay" href="{{ path('index') }}" >VENEZ VOIR MON BLOG</a>
-
-
-    </body>
+</div>
 
 {% endblock %}
