--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,14 @@
     <header>
         {% block nav %}
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="{{ path('index') }}">La Centrale</a>
+
+
+
+                <a class="navbar-brand" href="{{ path('annonces') }}">
+                    <img src="/images/autruche.jpg" width="30" height="30" alt="">
+                </a>
+
+
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
