--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -9,6 +9,8 @@
 
 <div class="container"></div>
     <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="images/voiture.jpg" alt="Card image cap">
+
         <div class="card-body">
             <h5 class="card-title">Voir les annonces</h5>
             <h6 class="card-subtitle mb-2 text-muted">ANNONCES</h6>
